<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="12sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/software" />

        <EditText
            android:id="@+id/softwareConfigurationName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confName" />

        <EditText
            android:id="@+id/creationCommand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/creationCommand" />

        <EditText
            android:id="@+id/deleteCommand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deleteCommand" />

    <Button
        android:id="@+id/addConfigurationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/submit"
        android:textColor="@color/white" />


</LinearLayout>